Fix styling on mobile with UI elems

--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -2,13 +2,13 @@
   max-width: 50rem;
   text-align: center;
   padding: 0 1rem;
-  height: 100%;
+  height: var(--app-height);
 }
 
 .siteName {
   font-family: 'Space Mono';
   font-weight: bold;
   font-style: italic;
-  font-size: 48px;
+  font-size: 3em;
   margin: 2rem 0;
 }
