--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,6 +25,10 @@
   --input-color: black;
   --input-text-color: lightgrey;
   --input-shadow-color: lightgrey;
+  --app-width: 100vw;
+  --app-height: 100vh;
+  /* Account for UI elements on mobile */
+  --app-height: 100svh;
 
   color: var(--text-color);
   background-color: var(--bg-color);
@@ -47,8 +51,8 @@ button {
 #root {
   display: grid;
   justify-items: center;
-  width: 100%;
-  height: 100%;
+  width: var(--app-width);
+  height: var(--app-height);
 }
 
 a {
@@ -62,4 +66,7 @@ a:hover {
 
 body {
   margin: 0;
+  position: fixed;
+  height: var(--app-height);
+  width: var(--app-width);
 }
